# n2p2-work

./: .gitignore  acsf_pca.py  generate_n2p2_input.py  generate_n2p2_input_old.py  lint.py  lint_test.py  linttest.py  plot_loss.py  pyproject.toml  sfparamgen.py  state_traj_to_n2p2_input.py  validate_n2p2_forces.py  validation_force_plot.py  validation_point_plot.py
.github/workflows/: action.yml
examples/find_acsf_parameter/: cuno.ipynb  imbalzano.ipynb
examples/pca_state_static/: 2022.01.30:00:14:38:Cu.out  2022.01.31:12:34:02:Cu.out  input.nn  pca.ipynb
examples/plot_learning_curve/: plot_learning_curve.ipynb
examples/predict/: input.nn  predict.ipynb  weights.029.data
