[tool.poetry]
name = "n2p2-work"
version = "0.1.0"
description = ""
authors = ["ueda <ueda@cp.prec.eng.osaka-u.ac.jp>"]

[tool.poetry.dependencies]
python = "3.8.6"
sklearn = "^0.0"
matplotlib = "^3.5.1"
Cython = "^0.29.27"
pandas = "^1.4.0"
ipykernel = "^6.7.0"
ase = "^3.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
